[tool.poetry]
name = "slack-bot"
version = "0.1.0"
description = ""
authors = ["emp7yhead <artyomkropp@gmail.com>"]
readme = "README.md"
packages = [{include = "slack_bot"}]

[tool.poetry.dependencies]
python = "^3.8.1"
slack-bolt = "^1.16.1"
python-dotenv = "^0.21.0"
sqlalchemy = "^2.0.9"
alembic = "^1.10.3"
psycopg2 = {version = "^2.9.6", optional = true}
psycopg2-binary = {version = "^2.9.6", optional = true}

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[tool.poetry.extras]
psycopg2 = ["psycopg2"]
psycopg2-binary = ["psycopg2-binary"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
